k8s/example/ingress-router-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mynginx
spec:
  rules:
  - host: gyliu2.poc.myvm.info
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx
          servicePort: 80
  - host: gyliu1.poc.myvm.info
    http:
      paths:
      - path: /
        backend:
          serviceName: my-nginx-1
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: my-nginx-1-11
  name: my-nginx-1
  namespace: default
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: my-nginx-1-11
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  labels:
    run: my-nginx
  name: my-nginx
  namespace: default
spec:
  ports:
  - name: nginx
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: my-nginx
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: my-nginx
  name: my-nginx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: my-nginx
  template:
    metadata:
      labels:
        run: my-nginx
    spec:
      imagePullSecrets:
        - name: myregistrykey
      containers:
      - image: node01.clusters.com:5000/gyliu/nginxv2:1.0
        imagePullPolicy: IfNotPresent
        name: my-nginx
        ports:
        - containerPort: 80
          protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: my-nginx-1-11
  name: my-nginx-1-11
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      run: my-nginx-1-11
  template:
    metadata:
      labels:
        run: my-nginx-1-11
    spec:
      imagePullSecrets:
        - name: myregistrykey
      containers:
      - image: node01.clusters.com:5000/gyliu/nginxv1:1.0
        imagePullPolicy: IfNotPresent
        name: my-nginx-1-11
        ports:
        - containerPort: 80
          protocol: TCP
